--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Set up Go
         uses: actions/setup-go@v2
         with:
-          go-version: '1.22.4'  # Укажите версию Go, которую вы используете
+          go-version: '1.22.4'
 
       - name: Install dependencies
         run: go mod download
@@ -31,18 +31,18 @@ jobs:
       - name: Calculate total coverage
         id: coverage
         run: |
-          go tool cover -func=coverage.out | grep total | awk '{print $3}' | tr -d '%'
+          total_coverage=$(go tool cover -func=coverage.out | grep total | awk '{print $3}' | tr -d '%')
+          echo "TOTAL_COVERAGE=${total_coverage}" >> $GITHUB_ENV
 
       - name: Display total coverage
-        run: echo "Total test coverage: ${{ steps.coverage.outputs.result }}%"
+        run: echo "Total test coverage - ${{ env.TOTAL_COVERAGE }}%"
 
       - name: Calculate backend coverage
-        # Предположим, что у вас есть отдельная метрика для полной базы бекенда.
         run: |
-          # Замените `full_backend_coverage` на ваш способ получения процента покрытия бекенда.
-          full_backend_coverage=80  # Пример: 80% общего покрытия бекенда
-          total_coverage=${{ steps.coverage.outputs.result }}
-          echo "Total coverage compared to full backend: $((total_coverage * 100 / full_backend_coverage))%"
+          full_backend_coverage=80
+          total_coverage=${{ env.TOTAL_COVERAGE }}
+          coverage_percentage=$((total_coverage * 100 / full_backend_coverage))
+          echo "Total coverage compared to full backend: $coverage_percentage%"
 
       - name: Upload coverage to Coveralls
         env:
