--- a/MakeFile
+++ b/MakeFile
@@ -1,3 +1,8 @@
+BUILD_VERSION := 1.0.0
+BUILD_DATE := $(shell date +%Y-%m-%d)
+BUILD_COMMIT := $(shell git rev-parse HEAD)
+
+
 .PHONY: run migrateup migratedown
 
 run:
@@ -8,3 +13,6 @@ migrateup: run
 
 debug:
 	dlv
+	
+build:
+	go build -ldflags "-X main.buildVersion=$(BUILD_VERSION) -X main.buildDate=$(BUILD_DATE) -X main.buildCommit=$(BUILD_COMMIT)" -o shortener cmd/shortener/main.go
