--- a/.github/workflows/shortenertest.yml
+++ b/.github/workflows/shortenertest.yml
@@ -87,7 +87,9 @@ jobs:
           github.head_ref == 'iter21' ||
           github.head_ref == 'iter22' ||
           github.head_ref == 'iter23' ||
-          github.head_ref == 'iter24'
+          github.head_ref == 'iter24' ||
+          github.head_ref == 'iter25'  ||
+          github.head_ref == 'iter25' 
         run: |
           shortenertestbeta -test.v -test.run=^TestIteration1$ \
               -binary-path=cmd/shortener/shortener
@@ -117,7 +119,9 @@ jobs:
           github.head_ref == 'iter21' ||
           github.head_ref == 'iter22' ||
           github.head_ref == 'iter23' ||
-          github.head_ref == 'iter24'
+          github.head_ref == 'iter24' ||
+          github.head_ref == 'iter25'  ||
+          github.head_ref == 'iter25' 
         run: |
           shortenertestbeta -test.v -test.run=^TestIteration2$ -source-path=.
 
@@ -145,7 +149,9 @@ jobs:
           github.head_ref == 'iter21' ||
           github.head_ref == 'iter22' ||
           github.head_ref == 'iter23' ||
-          github.head_ref == 'iter24'
+          github.head_ref == 'iter24' ||
+          github.head_ref == 'iter25'  ||
+          github.head_ref == 'iter25' 
         run: |
           shortenertestbeta -test.v -test.run=^TestIteration3$ -source-path=.
 
@@ -172,7 +178,9 @@ jobs:
           github.head_ref == 'iter21' ||
           github.head_ref == 'iter22' ||
           github.head_ref == 'iter23' ||
-          github.head_ref == 'iter24'
+          github.head_ref == 'iter24' ||
+          github.head_ref == 'iter25'  ||
+          github.head_ref == 'iter25' 
         run: |
           SERVER_PORT=$(random unused-port)
           shortenertestbeta -test.v -test.run=^TestIteration4$ \
@@ -201,7 +209,9 @@ jobs:
           github.head_ref == 'iter21' ||
           github.head_ref == 'iter22' ||
           github.head_ref == 'iter23' ||
-          github.head_ref == 'iter24'
+          github.head_ref == 'iter24' ||
+          github.head_ref == 'iter25'  ||
+          github.head_ref == 'iter25' 
         run: |
           SERVER_PORT=$(random unused-port)
           shortenertestbeta -test.v -test.run=^TestIteration5$ \
@@ -229,7 +239,9 @@ jobs:
           github.head_ref == 'iter21' ||
           github.head_ref == 'iter22' ||
           github.head_ref == 'iter23' ||
-          github.head_ref == 'iter24'
+          github.head_ref == 'iter24' ||
+          github.head_ref == 'iter25'  ||
+          github.head_ref == 'iter25' 
         run: |
           shortenertestbeta -test.v -test.run=^TestIteration6$ \
               -source-path=.
@@ -254,7 +266,9 @@ jobs:
           github.head_ref == 'iter21' ||
           github.head_ref == 'iter22' ||
           github.head_ref == 'iter23' ||
-          github.head_ref == 'iter24'
+          github.head_ref == 'iter24' ||
+          github.head_ref == 'iter25'  ||
+          github.head_ref == 'iter25' 
         run: |
           shortenertestbeta -test.v -test.run=^TestIteration7$ \
               -binary-path=cmd/shortener/shortener \
@@ -279,7 +293,9 @@ jobs:
           github.head_ref == 'iter21' ||
           github.head_ref == 'iter22' ||
           github.head_ref == 'iter23' ||
-          github.head_ref == 'iter24'
+          github.head_ref == 'iter24' ||
+          github.head_ref == 'iter25'  ||
+          github.head_ref == 'iter25' 
         run: |
           shortenertestbeta -test.v -test.run=^TestIteration8$ \
               -binary-path=cmd/shortener/shortener
@@ -302,7 +318,8 @@ jobs:
           github.head_ref == 'iter21' ||
           github.head_ref == 'iter22' ||
           github.head_ref == 'iter23' ||
-          github.head_ref == 'iter24'
+          github.head_ref == 'iter24' ||
+          github.head_ref == 'iter25' 
         run: |
           TEMP_FILE=$(random tempfile)
           shortenertestbeta -test.v -test.run=^TestIteration9$ \
@@ -327,7 +344,8 @@ jobs:
           github.head_ref == 'iter21' ||
           github.head_ref == 'iter22' ||
           github.head_ref == 'iter23' ||
-          github.head_ref == 'iter24'
+          github.head_ref == 'iter24' ||
+          github.head_ref == 'iter25' 
         run: |
           shortenertestbeta -test.v -test.run=^TestIteration10$ \
               -binary-path=cmd/shortener/shortener \
@@ -350,7 +368,8 @@ jobs:
           github.head_ref == 'iter21' ||
           github.head_ref == 'iter22' ||
           github.head_ref == 'iter23' ||
-          github.head_ref == 'iter24'
+          github.head_ref == 'iter24' ||
+          github.head_ref == 'iter25' 
         run: |
           shortenertestbeta -test.v -test.run=^TestIteration11$ \
               -binary-path=cmd/shortener/shortener \
@@ -371,7 +390,8 @@ jobs:
           github.head_ref == 'iter21' ||
           github.head_ref == 'iter22' ||
           github.head_ref == 'iter23' ||
-          github.head_ref == 'iter24'
+          github.head_ref == 'iter24' ||
+          github.head_ref == 'iter25' 
         run: |
           shortenertestbeta -test.v -test.run=^TestIteration12$ \
               -binary-path=cmd/shortener/shortener \
@@ -391,7 +411,8 @@ jobs:
           github.head_ref == 'iter21' ||
           github.head_ref == 'iter22' ||
           github.head_ref == 'iter23' ||
-          github.head_ref == 'iter24'
+          github.head_ref == 'iter24' ||
+          github.head_ref == 'iter25' 
         run: |
           shortenertestbeta -test.v -test.run=^TestIteration13$ \
               -binary-path=cmd/shortener/shortener \
@@ -410,7 +431,8 @@ jobs:
           github.head_ref == 'iter21' ||
           github.head_ref == 'iter22' ||
           github.head_ref == 'iter23' ||
-          github.head_ref == 'iter24'
+          github.head_ref == 'iter24' ||
+          github.head_ref == 'iter25' 
         run: |
           shortenertestbeta -test.v -test.run=^TestIteration14$ \
               -binary-path=cmd/shortener/shortener \
@@ -428,7 +450,8 @@ jobs:
           github.head_ref == 'iter21' ||
           github.head_ref == 'iter22' ||
           github.head_ref == 'iter23' ||
-          github.head_ref == 'iter24'
+          github.head_ref == 'iter24' ||
+          github.head_ref == 'iter25' 
         run: |
           shortenertestbeta -test.v -test.run=^TestIteration15$ \
               -binary-path=cmd/shortener/shortener \
@@ -445,7 +468,8 @@ jobs:
           github.head_ref == 'iter21' ||
           github.head_ref == 'iter22' ||
           github.head_ref == 'iter23' ||
-          github.head_ref == 'iter24'
+          github.head_ref == 'iter24' ||
+          github.head_ref == 'iter25' 
         run: |
           shortenertestbeta -test.v -test.run=^TestIteration16$ \
               -source-path=. \
@@ -460,7 +484,8 @@ jobs:
           github.head_ref == 'iter21' ||
           github.head_ref == 'iter22' ||
           github.head_ref == 'iter23' ||
-          github.head_ref == 'iter24'
+          github.head_ref == 'iter24' ||
+          github.head_ref == 'iter25' 
         run: |
           shortenertestbeta -test.v -test.run=^TestIteration17$ \
               -source-path=. \
@@ -474,7 +499,8 @@ jobs:
           github.head_ref == 'iter21' ||
           github.head_ref == 'iter22' ||
           github.head_ref == 'iter23' ||
-          github.head_ref == 'iter24'
+          github.head_ref == 'iter24' ||
+          github.head_ref == 'iter25' 
         run: |
           shortenertestbeta -test.v -test.run=^TestIteration18$ \
               -source-path=. \
